--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <artifactId>mybatis-plus-generator</artifactId>
             <version>3.5.1</version>
         </dependency>
+
+        <!--模板-->
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
         <!--druid-->
         <dependency>
             <groupId>com.alibaba</groupId>
