--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,11 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>3.0.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-ui</artifactId>
+            <version>3.0.3</version>
+        </dependency>
         <!--druid-->
         <dependency>
             <groupId>com.alibaba</groupId>
