--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,7 +56,7 @@ mybatis-plus:
 files:
   upload:
     # 临时存放路径
-    path: E:/desktop/file
+    path: E:/desktop/file/
     ak: 3ZRRSHSVDVJNQB4K9Q2F
     sk: onWB4AxC1DCHQ74VSRGi6lLsnRfr5CP1ViIZ43ZU
     endpoint: obs.cn-north-4.myhuaweicloud.com
