--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9090
 
 spring:
-#  引入conf自定义配置文件
+  #  引入conf自定义配置文件
   profiles:
     include: conf
   #  swagger3
@@ -26,19 +26,19 @@ spring:
       testOnBorrow: false
       testOnReturn: false
       poolPreparedStatements: true
-#  定时任务
+  #  定时任务
   task:
   scheduling:
     # 任务调度线程池大小 默认 1
     pool:
       size: 1
       # 调度线程名称前缀 默认 scheduling_
-    thread-name-prefix: scheduling_
+    #    thread-name-prefix: scheduling_
     shutdown:
-        # 线程池关闭时等待所有任务完成
-        await-termination: false
-        # 调度线程关闭前最大等待时间，确保最后一定关闭
-        await-termination-period: 10s
+      # 线程池关闭时等待所有任务完成
+      await-termination: false
+      # 调度线程关闭前最大等待时间，确保最后一定关闭
+      await-termination-period: 10s
 
 
   redis:
