--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.sf</groupId>
     <artifactId>SpeakFreely</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>SpeakFreely</name>
     <description>SpeakFreely</description>
     <properties>
